Gemini generated Unit Tests for GraphNode - Overall coverage is 95/86 - Github "Action" to ./gradlew build is not working